Refresh docs and theme
- Add the Graphite project directory, searchable picker, and project navigation.
- Support responsive layouts, keyboard navigation, and persistent color themes.
- Generate project navigation data from the documentation indexes.
- Update Iris configuration, terrain, lifecycle, and API references.
- Add Multiplexor guides and product screenshots.
- Refresh plugin integration, shared API, and contribution documentation.